fix: Fix Snackbar z-index - MEED-2627

--- a/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
@@ -545,7 +545,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
     }
 
     .v-snack {
-      z-index: @zindexModal!important;
+      z-index: @zindexSnackBar!important;
     }
   }
 }
